syntax = "proto3";
package evented.query;

import "core/evented.proto";


service EventQuery {
    rpc GetEventBook (Query) returns (evented.core.EventBook){}
    rpc GetNextSequence (evented.core.UUID) returns (NextSequence){}
}

message NextSequence {
    uint32 sequence = 1;
}

message Query {
    string domain = 1;
    string root = 2;
    uint32 lowerBound = 3;
    uint32 upperBound = 4;
}